# airsim_standalone

./: CMakeLists.txt  README.md
scripts/: benchmark_simgetimages.py
src/: benchmark_simgetimages.cpp  get_settings.cpp  hello_drone.cpp
